~ WIP runtime endpoint re-configuration