@@ -16,7 +16,6 @@ import static org.eclipse.milo.opcua.sdk.server.servicesets.AbstractServiceSet.c
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import org.eclipse.milo.opcua.sdk.server.EndpointConfig;
 import org.eclipse.milo.opcua.sdk.server.OpcUaServer;
 import org.eclipse.milo.opcua.sdk.server.servicesets.DiscoveryServiceSet;
@@ -53,6 +52,7 @@ public class DefaultDiscoveryServiceSet implements DiscoveryServiceSet {
   @Override
   public GetEndpointsResponse onGetEndpoints(
       ServiceRequestContext context, GetEndpointsRequest request) {
+
     List<String> profileUris =
         request.getProfileUris() != null
             ? List.of(request.getProfileUris())
@@ -67,7 +67,7 @@ public class DefaultDiscoveryServiceSet implements DiscoveryServiceSet {
                 })
             .filter(ed -> filterProfileUris(ed, profileUris))
             .distinct()
-            .collect(Collectors.toList());
+            .toList();
 
     ApplicationDescription filteredApplicationDescription =
         getFilteredApplicationDescription(request.getEndpointUrl());
@@ -78,7 +78,7 @@ public class DefaultDiscoveryServiceSet implements DiscoveryServiceSet {
             .map(
                 endpoint -> replaceApplicationDescription(endpoint, filteredApplicationDescription))
             .distinct()
-            .collect(toList());
+            .toList();
 
     return new GetEndpointsResponse(
         createResponseHeader(request),
@@ -99,9 +99,7 @@ public class DefaultDiscoveryServiceSet implements DiscoveryServiceSet {
         List.of(getFilteredApplicationDescription(request.getEndpointUrl()));
 
     applicationDescriptions =
-        applicationDescriptions.stream()
-            .filter(ad -> filterServerUris(ad, serverUris))
-            .collect(toList());
+        applicationDescriptions.stream().filter(ad -> filterServerUris(ad, serverUris)).toList();
 
     return new FindServersResponse(
         createResponseHeader(request),
@@ -161,18 +159,18 @@ public class DefaultDiscoveryServiceSet implements DiscoveryServiceSet {
 
   private ApplicationDescription getFilteredApplicationDescription(String endpointUrl) {
     List<String> allDiscoveryUrls =
-        server.getConfig().getEndpoints().stream()
+        server.getConfiguredEndpoints().stream()
             .map(EndpointConfig::getEndpointUrl)
             .filter(url -> url.endsWith("/discovery"))
             .distinct()
-            .collect(toList());
+            .toList();
 
     if (allDiscoveryUrls.isEmpty()) {
       allDiscoveryUrls =
-          server.getConfig().getEndpoints().stream()
+          server.getConfiguredEndpoints().stream()
               .map(EndpointConfig::getEndpointUrl)
               .distinct()
-              .collect(toList());
+              .toList();
     }
 
     List<String> matchingDiscoveryUrls =
